ros_ws/log/build_2024-05-02_11-44-55/flask_ros/stdout_stderr.log
running egg_info
writing ../../build/flask_ros/flask_ros.egg-info/PKG-INFO
writing dependency_links to ../../build/flask_ros/flask_ros.egg-info/dependency_links.txt
writing entry points to ../../build/flask_ros/flask_ros.egg-info/entry_points.txt
writing requirements to ../../build/flask_ros/flask_ros.egg-info/requires.txt
writing top-level names to ../../build/flask_ros/flask_ros.egg-info/top_level.txt
reading manifest file '../../build/flask_ros/flask_ros.egg-info/SOURCES.txt'
writing manifest file '../../build/flask_ros/flask_ros.egg-info/SOURCES.txt'
running build
running build_py
copying flask_ros/client.py -> /home/woni/worskspace/midterm/ros_ws/build/flask_ros/build/lib/flask_ros
running install
running install_lib
copying /home/woni/worskspace/midterm/ros_ws/build/flask_ros/build/lib/flask_ros/client.py -> /home/woni/worskspace/midterm/ros_ws/install/flask_ros/lib/python3.8/site-packages/flask_ros
byte-compiling /home/woni/worskspace/midterm/ros_ws/install/flask_ros/lib/python3.8/site-packages/flask_ros/client.py to client.cpython-38.pyc
  File "/home/woni/worskspace/midterm/ros_ws/install/flask_ros/lib/python3.8/site-packages/flask_ros/client.py", line 37
    global minimal_client
    ^
SyntaxError: name 'minimal_client' is used prior to global declaration

running install_data
running install_egg_info
removing '/home/woni/worskspace/midterm/ros_ws/install/flask_ros/lib/python3.8/site-packages/flask_ros-0.0.0-py3.8.egg-info' (and everything under it)
Copying ../../build/flask_ros/flask_ros.egg-info to /home/woni/worskspace/midterm/ros_ws/install/flask_ros/lib/python3.8/site-packages/flask_ros-0.0.0-py3.8.egg-info
running install_scripts
Installing client script to /home/woni/worskspace/midterm/ros_ws/install/flask_ros/lib/flask_ros
Installing server script to /home/woni/worskspace/midterm/ros_ws/install/flask_ros/lib/flask_ros
writing list of installed files to '/home/woni/worskspace/midterm/ros_ws/build/flask_ros/install.log'
